--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,24 @@ header, .project:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
 
+* {
+  background-color: #d9ead3;
+}
+
+.header {
+  background-color: #231010;
+}
+
+h1, h1 a {
+  background-color: #231010;
+  color:#d9ead3;
+}
+
+nav, nav a {
+  background-color: #231010;
+  color: #d9ead3;
+}
+
 .no-button {
   background: none;
   border: none;
@@ -15,10 +33,4 @@ header, .project:not(:last-child) {
 .no-button:hover {
   color: #065b83;
   text-decoration: underline;
-}
-
-.dollar-amount {
-  color: #056605;
-  font-weight: bold;
-  margin-left: -5px;
 }
