completed the html/css styling for the entire website

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fund My Project!</title>
+  <title>Tech Blog</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -13,16 +13,16 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2 header">
       <h1>
-        <a href="/">The Tech Blog</a>
+        <a style="color: #d9ead3;" href="/">The Tech Blog</a>
       </h1>
       <nav>
-        <a href="/">Home</a> | <!-- Added Home button here -->
+        <a style="color: #d9ead3;" href="/">Home</a> | <!-- Added Home button here -->
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
-        <a href="/profile">Dashboard</a> |
-        <button class="no-button" id="logout">Logout</button>
+        <a style="color: #d9ead3;" href="/profile">Dashboard</a> |
+        <button style="color: #d9ead3;" class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">Login</a>
+        <a style="color: #d9ead3;" href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
