--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,17 +1,13 @@
-<!-- Loop over each object in the projects array -->
 {{#each projects as |project| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/project/{{project.id}}">{{project.name}}</a>
-    </h2>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
+<div style="border: 2px solid black; padding: 15px; width: 80%; margin: 15px auto;">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <h2 style="margin: 0;">
+            <a style="color: #231010;" href="/project/{{project.id}}">{{project.name}}</a>
+        </h2>
+        <p style="margin: 0; font-size: 14px;">Created by {{project.user.name}} on {{format_date project.date_created}}</p>
+    </div>
+    <div class="text-left" style="padding-top: 15px;">
+        <p>{{project.description}}</p>
+    </div>
 </div>
 {{/each}}
