--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -30,7 +30,7 @@
     {{#each projects as |project|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a  style="color: #231010;" href="/project/{{project.id}}">{{project.name}}</a></h4>
       </div>
       <div class="col-md-4">
         <button class="btn btn-sm btn-danger" data-id="{{project.id}}">EDIT</button>
