--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,8 +1,9 @@
-<div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <button class="btn btn-primary">Comment</button>
-  </p>
+<div style="border: 2px solid black; padding: 15px; width: 80%; margin: 0 auto;">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <h2 style="margin: 0;">{{name}}</h2>
+        <p style="margin: 0; font-size: 14px;">Created by {{user.name}} on {{format_date date_created}}</p>
+    </div>
+    <div class="text-left" style="padding-top: 15px;">
+        <p>{{description}}</p>
+    </div>
 </div>
