added the functionality of the edit button, partial completion of comment button, but it is not functional

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -24,22 +24,29 @@
   </div>
 
   {{#if projects.length}}
-  <div class="col-md-6 project-list">
-    <h3>Past Posts:</h3>
+  <div class="col-md-6">
+    <h3>Your Posts:</h3>
 
     {{#each projects as |project|}}
     <div class="row mb-2">
       <div class="col-md-8">
-        <h4><a  style="color: #231010;" href="/project/{{project.id}}">{{project.name}}</a></h4>
+        <h4><a style="color: #231010;" href="/project/{{project.id}}">{{project.name}}</a></h4>
+        
+        <!-- Edit form hidden by default -->
+        <form class="edit-project-form" data-id="{{project.id}}" style="display:none;">
+          <input class="form-input" type="text" value="{{project.name}}" name="project-name-edit" />
+          <textarea class="form-input" name="project-desc-edit">{{project.description}}</textarea>
+          <button type="submit">Save</button>
+        </form>
       </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{project.id}}">EDIT</button>
+      <div class="col-md-4 text-right">
+        <button class="btn btn-sm btn-warning btn-edit" data-id="{{project.id}}">EDIT</button>
         <button class="btn btn-sm btn-danger" data-id="{{project.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
   </div>
   {{/if}}
-</div>
 
+</div>
 <script src="./js/profile.js"></script>
