--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -6,4 +6,9 @@
     <div class="text-left" style="padding-top: 15px;">
         <p>{{description}}</p>
     </div>
+    <div style="display: flex; justify-content: flex-end; padding-top: 10px;">
+        <button id="commentBtn" style="background-color: #000; color: #FFF; border: none; padding: 8px 12px; cursor: pointer; transition: background-color 0.3s;">Comment</button>
+    </div>
 </div>
+
+
