--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -10,5 +10,10 @@
         <button id="commentBtn" style="background-color: #000; color: #FFF; border: none; padding: 8px 12px; cursor: pointer; transition: background-color 0.3s;">Comment</button>
     </div>
 </div>
+<form id="commentForm" style="display: none;">
+    <textarea id="commentText"></textarea>
+    <button id="submitComment">Submit</button>
+</form>
 
 
+<script src="/js/project.js"></script>
