--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,3 +38,20 @@ nav, nav a {
 button:hover {
   cursor: pointer;
 }
+
+/*styling for the user prompt to sign in*/
+
+#loginPromptModal {
+  /* existing styles */
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+#loginPromptModal button {
+  padding: 5px 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007BFF;
+  color: white;
+  cursor: pointer;
+}
